gcc/testsuite/rust/rustc/ui/parser/doc-before-rbrace.rs
fn main() {
    println!("Hi"); /// hi
// { dg-error ".E0585." "" { target *-*-* } .-1 }
// { help ".E0585." "" { target *-*-* } .-2 }
}

